--- a/css/style.css
+++ b/css/style.css
@@ -318,7 +318,7 @@ section.now-playing-upcoming {
 /* Actor Details */
 .actor-details-top {
 	display: flex;
-	margin: 50px 0 30px;
+	margin: 50px 0 30px 0;
 
 	img {
 		height: 500px;
